General width restrictions set on certain page elements, including text entries, to ensure element centering and text side padding on small screens

--- a/assets/css/article-page.css
+++ b/assets/css/article-page.css
@@ -77,5 +77,21 @@
 /* Hides section sibheading */
 .article-section > .section-subheading { 
     display: none; 
-}
+}  
 
+/* Removes general width restrictions */ 
+.article-page .article-section, 
+.article-page .section-body { 
+    max-width: none; 
+
+} 
+
+/* .article-page .text-entry { 
+    max-width: var( --page-inner-width ); 
+    margin-left: auto; margin-right: auto; 
+
+} */
+
+.article-section .text-entry { 
+    text-align: left; 
+} 
