--- a/assets/css/page.css
+++ b/assets/css/page.css
@@ -24,10 +24,6 @@
     font-size: var( --page-subheading-font-size ); 
 } 
 
-.article-section .text-entry { 
-    text-align: left; 
-} 
-
 /* Sets paragraph to paragraph vertical distance */ 
 .text-entry + .text-entry { 
     margin-top: var( --text-entry-margin-bottom ); 
